--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
   --color-secondary: #0D2622;
   --color-tertiary: #0A185C;
   --color-accent: #185C0A;
+
+  --color-primary-rgb: 217, 242, 238;
+  --color-secondary-rgb: 13, 38, 34;
+  --color-tertiary-rgb: 10, 24, 92;
+  --color-accent-rgb: 24, 92, 10;
 }
 
 .dark {
@@ -17,6 +22,11 @@
   --color-secondary: #D9F2EE;
   --color-tertiary: #A3B1F5;
   --color-accent: #B1F5A3;
+
+  --color-primary-rgb: 13, 38, 34;
+  --color-secondary-rgb: 217, 242, 238;
+  --color-tertiary-rgb: 163, 177, 245;
+  --color-accent-rgb: 177, 245, 163;
 }
 
 @layer base {
